一般配布開始

--- a/cmd/app/app_config.json
+++ b/cmd/app/app_config.json
@@ -1,6 +1,6 @@
 {
     "Name": "SwordBlur",
-    "Version": "1.0.0_beta_06",
+    "Version": "1.0.0",
     "Horizontal": true,
     "ControlWindowSize": {
         "Width": 512,
