launch.jsonの環境変数と作業ディレクトリを修正

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,12 +11,17 @@
       "mode": "debug",
       "program": "${workspaceFolder}/cmd/main.go",
       "preLaunchTask": "go: mod tidy",
+      "env": {
+        "WORKSPACE_FOLDER": "${workspaceFolder}",
+        "ENV": "debug"
+      },
     },
     {
       "name": "[dev] Build",
       "type": "debugpy",
       "request": "launch",
       "program": "${workspaceFolder}/.vscode/scripts/build_exe.py",
+      "cwd": "${workspaceFolder}/cmd",
       "env": {
         "WORKSPACE_FOLDER": "${workspaceFolder}",
         "ENV": "dev"
@@ -27,6 +32,7 @@
       "type": "debugpy",
       "request": "launch",
       "program": "${workspaceFolder}/.vscode/scripts/build_exe.py",
+      "cwd": "${workspaceFolder}/cmd",
       "env": {
         "WORKSPACE_FOLDER": "${workspaceFolder}",
         "ENV": "prod"
